--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "react-native-paper": "^2.15.2",
     "react-navigation": "^3.8.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
+    "react-redux": "5.1.1",
+    "redux": "^4.0.1",
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
