--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-paper": "^2.15.2",
     "react-navigation": "^3.8.1",
+    "react-navigation-fluid-transitions": "^0.3.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
     "react-redux": "5.1.1",
     "redux": "^4.0.1",
