--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "eslint-config-wesbos": "0.0.19",
     "expo": "^32.0.0",
     "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-elements": "^1.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-modal-datetime-picker": "^7.2.0",
     "react-native-paper": "^2.15.2",
     "react-native-parallax-scroll-view": "^0.21.3",
+    "react-native-parallax-scrollview": "^3.0.0",
     "react-navigation": "^3.8.1",
     "react-navigation-fluid-transitions": "^0.3.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
